Fixed the spacing, so the tags take the appropriate amount of space in each card.

--- a/client/src/main/resources/client/stylesheets/card/Card.css
+++ b/client/src/main/resources/client/stylesheets/card/Card.css
@@ -36,18 +36,17 @@
 }
 
 #tagInCardContainerView{
-    -fx-padding: 0 0 0 0;
     -fx-background-color: transparent;
+
+}
+
+#tagInCardContainerView .list-cell {
+    -fx-padding: 0;
 }
 
 #tagInCardContainerView .scroll-bar:horizontal .increment-arrow,
 #tagInCardContainerView .scroll-bar:horizontal .decrement-arrow,
 #tagInCardContainerView .scroll-bar:horizontal .increment-button,
 #tagInCardContainerView .scroll-bar:horizontal .decrement-button {
-    -fx-padding:0;
-}
-
-#tagInCardContainer{
-    -fx-border-width: 0;
-    -fx-padding: 0 0 0 0;
+    -fx-padding: 0;
 }
